services/diary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: diary
  namespace: blog
spec:
  rules:
  - host: diary.takutakahashi.dev
    http:
      paths:
      - backend:
          service:
            name: diary-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - diary.takutakahashi.dev
    secretName: diary-tls-secret
